# efact-hardware-agent

./: Cargo.toml  README.md  config.toml  config.toml.example  install.ps1  install.sh
.github/workflows/: release.yml
src/: config.rs  config_store.rs  icon.rs  main.rs  paths.rs  printer.rs  system_printer.rs  tray.rs
src/scale/: manager.rs  mod.rs  protocols.rs
