[package]
name = "efact-hardware-agent"
version = "0.4.1"
edition = "2021"
description = "Local hardware agent for eFact POS — thermal printers and RS-232 scales"

[[bin]]
name = "efact-hardware-agent"
path = "src/main.rs"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.5", features = ["cors"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
hidapi = "2"
serialport = "4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "1"

[target.'cfg(any(target_os = "windows", target_os = "macos", target_os = "linux"))'.dependencies]
tracing-appender = "0.2"
tray-icon = "0.22"
winit = "0.30"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
